--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
       function sendFacebookEvent(eventName) {
         const facebookData = getFacebookCookies();
     
-        fetch("https://api-facebook-pleno.vercel.app/send-event", {
+        fetch("https://corrida-zero7-5a-vendas.vercel.app/send-event", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({
