--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
 </head>
 <body id="body" class="smooth-scroll-wrapper">
 
+  <div id="modalVsl" class="modal-depoimento" style="display: none;">
+    <div class="modal-content-depoimento">
+      <span class="close-vsl">&times;</span>
+      <div id="video-container-vsl"></div>
+    </div>
+  </div>
+  
+
     <header class="header" id="home"> 
       <div class="blush um"></div>
 
@@ -52,11 +60,15 @@
 
                   <a href="#planos"><button class="button">RESERVAR MEU PLANO</button></a>
             </div>
+
+            <div class="video" id="vsl">
+              <img src="./assets/bgvideo.webp" alt="">
+            </div>
           </div>
       </div>      
       <div class="image">
-        <img class="desktop" src="./assets/bg corrida.webp" alt="">
-        <img class="mobile" src="./assets/bg mobile.webp" alt="">
+        <img class="desktop" src="./assets/bg2.webp" alt="">
+        <img class="mobile" src="./assets/bg2.webp" alt="">
       </div>
     </header>
 
