--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
           </div>
 
           <div class="price">
-            <h6>De R$1.197 por</h6>
+            <h6>De R$1.197 por:</h6>
             <h4><span>12x</span> R$51,47</h4>
             <h5><span>ou</span> R$514,71 <span>à vista</span></h5>
           </div>
