--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
         <ion-icon name="logo-whatsapp"></ion-icon>
       </a>
 
-      <h3>Estamos online</h3>
+      <!-- <h3>Estamos online</h3> -->
     </div>
 
      <!-- Google Tag Manager (noscript) -->
