--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
           <div class="content">
               <p>CNPJ: 49.452.697/0001-20</p>
               <p><a href="https://zero7.com.br/politica-de-privacidade/">Política de Privacidade e Termos</a></p>
-              <p>© 2025 | Todos os direitos reservados.
+              <p>© 2025 | Todos os direitos reservados..
               </p>
           </div>
       </div>
