--- a/index.html
+++ b/index.html
@@ -36,14 +36,31 @@
 </head>
 <body id="body" class="smooth-scroll-wrapper">
 
-  <div id="modalVsl" class="modal-depoimento" style="display: none;">
-    <div class="modal-content-depoimento">
-      <span class="close-vsl">&times;</span>
-      <div id="video-container-vsl"></div>
-    </div>
-  </div>
-  
+    <div class="tarja">
+      <!-- <img class="bg" src="./assets/bg footer.webp" alt=""> -->
 
+      <div class="wrapper">
+          <div class="text">
+            <div class="cupom">
+              <h3>A oferta se encerra em:</h3>
+          </div>
+          
+              <div class="border">
+                <div class="timer">
+                  <div id="countdown"></div>
+                </div>
+              </div>
+          </div>
+      </div>
+    </div>
+
+    <div id="modalVsl" class="modal-depoimento" style="display: none;">
+      <div class="modal-content-depoimento">
+        <span class="close-vsl">&times;</span>
+        <div id="video-container-vsl"></div>
+      </div>
+    </div>
+  
     <header class="header" id="home"> 
       <div class="blush um"></div>
 
